--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,11 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 1520px;
+  padding: 0;
+  min-width: 100%;
   min-height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 /* Fun, professional micro-interactions */
